<resources>
    <string name="app_name">Cestemo Educare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="cestemo_educare">Cestemo Educare</string>
    <string name="email_info">info@cestemo.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_location">Our Locations</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_email">E-mail Us</string>
    <string name="menu_website">Website</string>
    <string name="menu_about">About Us</string>
    <string name="menugroup_communicate">Communicate</string>
    <string name="menu_settings">Settings</string>
    <string name="menugroup_tools">Tools</string>
    <string name="recycle_fragment">This is the recycle Fragment</string>
    <string name="hint_name">FULL NAME</string>
    <string name="hint_phone">PHONE NUMBER</string>
    <string name="hint_address">ADDRESS</string>
    <string name="hint_hear">WHERE DID YOU HEAR ABOUT US</string>
    <string name="hint_query">YOUR  QUERY</string>
    <string name="btn_query">SUBMIT QUERY</string>
    <string name="err_msg_name">Name cannot be empty</string>
    <string name="err_msg_phone">Phone Number cannot be empty</string>
    <string name="err_wrong_phone">Please enter a valid Phone Number</string>
    <string name="err_msg_address">Address cannot be empty</string>
    <string name="err_msg_query">Query cannot be empty</string>
    <string name="err_msg_hear">Please tell us where you heard about us!</string>
    <string name="preference_title">SETTINGS</string>
    <string name="registration_hint">Registration Number</string>
    <string name="emailid_hint">Email id</string>
    <string name="preference_registration_summary">Cestemo Educare Registration Number</string>
    <string name="preference_emailid_summary">Register your email id</string>
    <string name="forget_registration_number">FORGET ASSOCIATED ACCOUNT</string>
    <string name="forget_summary">Tap here to forget the Cestemo Educare account associated with this app.</string>
    <string name="no_internet_connectivity">Your Phone is not connected to  the Internet.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_registered_account">You do not have a registered account associated with this app</string>
    <string name="call_permission_error">App was unable to make the call. Check your system permissions.</string>
    <string name="content_phone_call">Call this Center</string>
    <string name="email_from">Your email id</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="err_msg_mailid">Error in email id</string>
    <string name="err_msg_subject">Subject cannot be empty</string>
    <string name="err_msg_message">Message cannot be empty</string>
    <string name="olly">OLLY</string>
    <string name="cestemoSoftware">cestemo consumer software</string>
    <string name="onclaveSystems">Onclave Systems</string>
    <string name="venture">a cestemo educare venture</string>
    <string name="developed">developed by</string>
    <string name="onclave">Onclave Research Labs \u00a9 2015</string>
    <string name="err_invalid_mail">Invalid mail</string>
    <string name="url_login">www.ABCD.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment - Home Fragment</string>
    <string name="title_activity_email_dialog">Members\' Only Area</string>
    <string name="no_registered_email">Please register your email id to continue</string>
    <string name="no_registered_accountandemail">please reigster your registration number and emailid</string>
</resources>
