<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <PreferenceCategory
        android:title="@string/preference_title">
        <EditTextPreference
            android:title="@string/registration_hint"
            android:summary="@string/preference_registration_summary"
            android:key="registrationno"
            android:hint="Your cyllid registration number"/>


        <Preference
            android:title="@string/forget_registration_number"
            android:key="forgetRegistrationNumber"
            android:summary="Click here to forget the Cyllid account associated with this app." />
    </PreferenceCategory>
</PreferenceScreen>
