<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/bottom_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    tools:context="com.onclavesystems.cestemoeducare.EmailFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_from_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextFrom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_from"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <requestFocus />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_subject_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextSubject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/subject"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <requestFocus />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/message_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="5"
                android:hint="@string/message"
                android:minLines="3"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:gravity="top"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/buttonSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Send" />
    </LinearLayout>
</ScrollView>


